# invoices

./: .gitignore  google_gemini.py  hf_model_local.py  ollama_model.py  ollama_model_test.py  openrouter_model_test.py  pyproject.toml  show_output.php  test_utility.py
data/: data_invoice.csv
data/test_outputs/gemini-pro-preview/data/test_invoices/: ACTIVE24 825014640.json  ALUPA FVS-1111224.json  ALZA 2976077985.json  ANAFRA 9001402158.json  ARROW 20043108.json  AZT 202400381.json  Alien 250100018.json  Alza 2977457665.json  BRAHA 20250153.json  CCF_000002.json  CCF_000008.json  CCF_000010.json  Centrum služeb Broumov FV7852024.json  GAYA 1241102.json  Google 5076452032.json  Jialichuang 2731661A20240129184.json  Josef Škoda.json  KRUP 524003519.json  eko 240074 Scan2024-03-26_133504.json
data/test_outputs/hf_aya_vision_32b/data/test_invoices/: ACTIVE24 825014640.json
data/test_outputs/ollama_gemma3_12b/data/test_invoices/: ACTIVE24 825014640.json  ALUPA FVS-1111224.json  ALZA 2976077985.json  ANAFRA 9001402158.json  ARROW 20043108.json  AZT 202400381.json  Alien 250100018.json  Alza 2977457665.json  BRAHA 20250153.json  CCF_000002.json  CCF_000008.json  CCF_000010.json  Centrum služeb Broumov FV7852024.json  GAYA 1241102.json  Google 5076452032.json  Jialichuang 2731661A20240129184.json  Josef Škoda.json  (+2 more)
invoice_service/: DALSI_POSTUP.md  Dockerfile  README.md  docker-compose.yaml  invoice_types.py  main.py  requirements.txt  test_script.sh  utils.py
invoice_service/test/requests/: send_invoice_request.py
test_code/: hf_aya_model_test.py  hf_vision.py
(+179 files in other folders)
